--- a/html-reference.html
+++ b/html-reference.html
@@ -16,6 +16,7 @@ th, td {
 </style>
   </head>
   <body>
+  <h1>HTML Reference</h1>
    
    <table>
   <tr>
@@ -26,72 +27,72 @@ th, td {
   </tr>
   <tr>
     <td>HTML tag</td>
-    <td>&lt;html&gt; &lt;/html&gt;</td>
+    <td class="syntax">&lt;html&gt; &lt;/html&gt;</td>
     <td>&lt;html&gt; HTML code goes here &lt;/html&gt;</td>
     <td><a href="#html">Link</a></td>
   </tr>
   <tr>
     <td>Head</td>
-    <td>&lt;head&gt; &lt;/head&gt;</td>
+    <td class="syntax">&lt;head&gt; &lt;/head&gt;</td>
     <td>&lt;head&gt; Data &lt;/head&gt;</td>
     <td><a href="#head">Link</a></td>
   </tr>
   <tr>
     <td>Title</td>
-    <td>&lt;Title&gt;&lt;/title&gt;</td>
+    <td class="syntax">&lt;Title&gt;&lt;/title&gt;</td>
     <td>&lt;Title&gt; HTML Reference &lt;/title&gt;</td>
     <td><a href="#title">Link</a></td>
   </tr>
   <tr>
     <td>Body</td>
-    <td>&lt;body&gt; &lt;/body&gt;</td>
+    <td class="syntax">&lt;body&gt; &lt;/body&gt;</td>
     <td>&lt;body&gt; Body code here &lt;/body&gt;</td>
     <td><a href="#body">Link</a></td>
   </tr>
   <tr>
     <td>Headings</td>
-    <td>&lt;h1-9&gt; &lt;/h1-9&gt;</td>
+    <td class="syntax">&lt;h1-9&gt; &lt;/h1-9&gt;</td>
     <td>&lt;h1&gt; Heading &lt;/h1&gt;</td>
     <td><a href="#heading">Link</a></td>
   </tr>
   <tr>
     <td>Paragraphs</td>
-    <td>&lt;p&gt;&lt;/p&gt;</td>
+    <td class="syntax">&lt;p&gt;&lt;/p&gt;</td>
     <td>&lt;p&gt; Text &lt;/p&gt;</td>
     <td><a href="#paragraph">Link</a></td>
   </tr>
   <tr>
     <td>Breaks</td>
-    <td>&lt;br&gt;</td>
+    <td class="syntax">&lt;br&gt;</td>
     <td>&lt;br&gt;</td>
     <td><a href="#break">Link</a></td>
   </tr>
   <tr>
     <td>Lines</td>
-    <td>&lt;hr&gt;</td>
+    <td class="syntax">&lt;hr&gt;</td>
     <td>&lt;hr&gt;</td>
     <td><a href="#line">Link</a></td>
   </tr>
   <tr>
     <td>Comments</td>
-    <td>&lt;!--comment goes here--&gt;</td>
+    <td class="syntax">&lt;!--comment goes here--&gt;</td>
     <td>&lt;!--comments arent shown to the user--&gt;</td>
     <td><a href="#comments">Link</a></td>
   </tr>
     <tr>
     <td>Links</td>
-    <td>&lt;a href="url">link text&lt;/a&gt;</td>
+    <td class="syntax">&lt;a href="url">link text&lt;/a&gt;</td>
     <td>&lt;a href="https://google.com">link text&lt;/a&gt;</td>
     <td><a href="#link">Link</a></td>
   </tr>  <tr>
     <td>Images</td>
-    <td>&lt;img src="imageurl"&gt;</td>
+    <td class="syntax">&lt;img src="imageurl"&gt;</td>
     <td>&lt;img src="image.png"&gt;</td>
     <td><a href="#image">Link</a></td>
   </tr>
     <tr>
     <td>Lists</td>
-    <td>&lt;ul&gt;<br>
+    <td class="syntax">&lt;ul&gt;<br>
         &lt;li&gt;&lt;/li&gt;<br>
         &lt;li&gt;&lt;/li&gt;<br>
       &lt;/ul&gt;<br>
@@ -115,7 +116,7 @@ th, td {
 
     <tr>
     <td>Tables</td>
-    <td>&lt;table&gt;<br>
+    <td class="syntax">&lt;table&gt;<br>
   &lt;tr&gt;<br>
     &lt;th&gt;&lt;/th&gt;<br>
     &lt;th&gt;&lt;/th&gt;<br>
@@ -164,18 +165,13 @@ th, td {
   
     <tr>
     <td>Blocks</td>
-    <td>&lt;div&gt; &lt;/div&gt;</td>                  <!--End Of Table-->
+    <td class="syntax">&lt;div&gt; &lt;/div&gt;</td>       <!--End Of Table-->
     <td>&lt;div&gt;code here&lt;/div&gt;</td>
     <td><a href="#block">Link</a></td>
   </tr>
   
 </table>
-   
-   
-   
-
-   
-    <h2>HTML Element</h2>   
+  
     
     
     <a name="html"></a>
@@ -433,3 +429,17 @@ th, td {
 <a href="https://www.w3schools.com/html/html_blocks.asp">W3schools Link</a>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
