--- a/html-reference.html
+++ b/html-reference.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>HTML Reference</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
+    <link href="html-reference.css" rel="stylesheet" type="text/css" />
     <style>
 table, th, td {
     border: 1px solid black;
