--- a/html-reference.html
+++ b/html-reference.html
@@ -399,7 +399,7 @@
                                                     &lt;td&gt;Data8&lt;/td&gt;<br>
                                                      &lt;td&gt;Data9&lt;/td&gt;<br>
                                                       &lt;/tr&gt;<br>
-                                                        &lt;/table&gt;</p>
+  <!--See what I mean About this indentation?-->        &lt;/table&gt;</p>
                                                       <h3 class="heading3">Example</h3>
                                                     <p>You use a table when you want to organize information.</p>
                                                   <h3 class="heading3">Display</h3>
