--- a/html-reference.html
+++ b/html-reference.html
@@ -254,6 +254,7 @@
           <p>Use a header for telling the user what you will be talking about, like a title for an essay</p>
         <h3 class="heading3">Display</h3>
       <h2>This is what a Heading looks like</h2>
+     <h4>Heading</h4>
     <a href="https://www.w3schools.com/html/html_headings.asp">W3schools Link</a>
     
 <hr class="hr">
@@ -296,6 +297,7 @@
           <p>You can use this element when you want to seperate groups of code from one another.</p>
         <h3 class="heading3">Display</h3>
       <p>This is what a line looks like</p>
+     <hr>
     <a href="https://www.w3schools.com/tags/tag_hr.asp">W3schools Link</a>
     
 <hr class="hr">
