--- a/html-reference.html
+++ b/html-reference.html
@@ -405,7 +405,7 @@
                                                       <h3 class="heading3">Example</h3>
                                                     <p>You use a table when you want to organize information.</p>
                                                   <h3 class="heading3">Display</h3>
-                                                <table class="default">
+                                                <table>
                                               <tr>
                                             <th>Header1</th>
                                           <th>Header2</th> 
