--- a/website-project/index.html
+++ b/website-project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Website Layout</title>
+<title>Andrea Pirlo</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="layout.css">
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-<div class="header">
-  <h1>Home Header</h1>
-  <p>Resize the browser window to see the responsive effect.</p>
+<div class="header" bgimage>
+  <h1>Andrea Pirlo</h1>
+  <p>A legend of Soccer.</p>
 </div>
 
 <div class="topnav">
@@ -23,8 +23,8 @@
 
 <div class="row content">
   <div class="column side">
-    <h2>Side</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..<img src="https://goo.gl/jcdXn2"></p>
+    <h2>Andrea Pirlo</h2>
+    <p>Small description<img src="https://www.thefamouspeople.com/profiles/images/andrea-pirlo-1.jpg"></p>
   </div>
   <div class="column middle">
     <h2>Main Content</h2>
