--- a/website-project/index.html
+++ b/website-project/index.html
@@ -4,8 +4,8 @@
 <title>Andrea Pirlo</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="matteogristina.github.io/website-project/layout.css">
-<link rel="stylesheet" type="text/css" href="matteogristina.github.io/website-project/styles.css">
+<link rel="stylesheet" type="text/css" href="https://matteogristina.github.io/website-project/layout.css">
+<link rel="stylesheet" type="text/css" href="https://matteogristina.github.io/website-project/styles.css">
 </head>
 <body>
 
