--- a/u3portfolio/index.html
+++ b/u3portfolio/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>History Of the Internet</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body class="background">
+    <h1>A Brief History of The Internet</h1>
+    <a href="https://sites.google.com/sduhsd.net/ecsfall2017-gristinam7552/unit-3/history-of-the-internet?authuser=2">Back To Google Sites</a>
+    <p>The internet is a thing that we carry around in our pockets, and at home. However, the internet was not always as accessible as today. Below is a timeline of the development and creation of the internet.</p>
+    <img src="https://matteogristina.github.io/images/bhoitimeline.png">
+    <h2>Future Developments of the Internet</h2>
+    <p>I believe that the internet will be more user customized, such as recognizing your voice. I also think the internet will still grow as a hub for information. With the growth, the security of the internet will grow also. I think the internet is in a good place right now, but I also believe it will take over literature, and will make things like libraries and bookstores to switch to a digital version.</p>
+  </body>
+</html>
