--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<a href="https://matteogristina.github.io/exercises/indextwo.html">List of Exercises</a><br>
 			<a href="https://matteogristina.github.io/css-exercises/index.html">CSS Exercises</a><br>
 				<a href="https://matteogristina.github.io/html-reference.html">HTML Tutorial</a><br>
+					<a href="https://matteogristina.github.io/u3portfolio/index.html">History of the Internet</a><br>
 <!--Paragraph-->
 	<p style="background-color:blue;">I think this is supposed to be a paragraph</p>
 
