--- a/website-project/index.html
+++ b/website-project/index.html
@@ -1,1 +1,153 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Andrea Pirlo</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="layout.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 
+
+<body>
+
+<div class="header" bgimage>
+  <h1>Andrea Pirlo</h1>
+  <p>The Architect of Soccer.</p>
+</div>
+
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="PlayingStyle.html">Playing Style</a>
+  <a href="Milan.html">Milan Career</a>
+  <a href="Juve.html">Juventus Career</a>
+  <a href="US.html">U.S. Career</a>
+  <a href="IntCareer.html">Intenational Career</a>
+</div>
+
+<div class="row content">
+  <div class="column side">
+    <h2>Andrea Pirlo</h2>
+    <p>Picture of Pirlo<img src="https://matteogristina.github.io/images/andrea-pirlo-1.jpg">Pirlo Holding Trophy
+    <img src="https://matteogristina.github.io/images/juvetrophy.jpeg">Pirlo Holding World Cup Trophy
+    <img src="https://matteogristina.github.io/images/worldcup.jpg"></p>
+    
+  </div>
+  <div class="column middle">
+    <h2>Pirlo, a Living Legend of Soccer</h2>
+    <p>Home Page stuff</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/r3IID1bu16g" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <div class="column side">
+    <h2>Titles Won</h2>
+<table>
+<tr>
+<th>Title Won</th>
+<th>Year</th> 
+<th>Club/Team</th>
+</tr>
+<tr>
+<td>World Cup</td>
+<td>2006</td>
+<td>Italy</td>
+</tr>
+<tr>
+<td>Champions League</td>
+<td>2002/2003</td>
+<td>AC Milan</td>
+</tr>
+<tr>
+<td>Champions League</td>
+<td>2006/2007</td>
+<td>AC Milan</td>
+</tr>
+<tr>
+<td>Italian Champions</td>
+<td>2003/2004</td>
+<td>AC Milan</td>
+</tr>
+<tr>
+<td>Italian Champions</td>
+<td>2010/2011</td>
+<td>AC Milan</td>
+</tr>
+<tr>
+<td>Italian Champions</td>
+<td>2011/2012</td>
+<td>Juventus</td>
+</tr>
+<tr>
+<td>Italian Champions</td>
+<td>2012/2013</td>
+<td>Juventus</td>
+</tr>
+<tr>
+<td>Italian Champions</td>
+<td>2013/2014</td>
+<td>Juventus</td>
+</tr>
+<tr>
+<td>Italian Champions</td>
+<td>2014/2015</td>
+<td>Juventus</td>
+</tr>
+<tr>
+<td>Italian Cup</td>
+<td>2002/2003</td>
+<td>AC Milan</td>
+</tr>
+<tr>
+<td>Italian Cup</td>
+<td>2011/2012</td>
+<td>Juventus</td>
+</tr>
+<tr>
+<td>Italian Super Cup</td>
+<td>2012/2013</td>
+<td>Juventus</td>
+</tr>
+<tr>
+<td>Italian Super Cup</td>
+<td>2013/2014</td>
+<td>Juventus</td>
+</tr>
+<tr>
+<td>FIFA Club World Cup</td>
+<td>2008</td>
+<td>AC Milan</td>
+</tr>
+<tr>
+<td>European Under-21 Champion</td>
+<td>2000</td>
+<td>Italy Under-21</td>
+</tr>
+<tr>
+<td>Italienischer Zweitligameister</td>
+<td>1996/1997</td>
+<td>Brescia Calcio</td>
+</tr>
+<tr>
+<td>Viareggio</td>
+<td>1995/1996</td>
+<td>Brescia Primavera</td>
+</tr>
+<tr>
+<td>Intercontinental Cup Winner</td>
+<td>2007</td>
+<td>AC Milan</td>
+</tr>
+</table>
+  </div>
+</div>
+
+<div class="footer">
+  <p>Learn More:</p><br>
+  <a href="https://www.transfermarkt.com/andrea-pirlo/profil/spieler/5817">--Statistics and Data--</a>&nbsp;&nbsp;&nbsp;
+  <a href="https://en.wikipedia.org/wiki/Andrea_Pirlo">--General Information--</a>&nbsp;&nbsp;&nbsp;
+  <a href="https://twitter.com/pirlo_official?lang=en">--Twitter--</a>
+  
+  
+</div>
+  
+</body>
+</html>
