--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!--Setup-->
 	<!DOCTYPE html>
 		<html>
+			<head>
+			 <link rel="icon" href="/images/favicon.png">
+			</head>
+			
+			
+			
 <!--Title--> 
 	<title>My Website</title>
 		<body style="background-color:red;">
