--- a/background/index.html
+++ b/background/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Background</title>
+  </head>
+  <body>
+    <img src='/images/background.jpg'>
+  </body>
+</html>
