--- a/background/index.html
+++ b/background/index.html
@@ -4,6 +4,6 @@
     <title>Background</title>
   </head>
   <body>
-    <img src='/images/background.jpg'>
+    <img src='/images/wallpaper.jpg'>
   </body>
 </html>
