--- a/background/index2.html
+++ b/background/index2.html
@@ -6,7 +6,7 @@
     <title>Background</title>
   </head>
   <body>
-    <img src='wallpaper.jpg'
+    <img src="wallpaper.jpg"
             srcset='/images/wallpaper.jpg 5700w,
             /images/wallpaper2.jpg 3500w,
             /images/wallpaper3.jpg 2000w,
