--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<title>My Website</title>
 		<body style="background-color:red;">
 <!--Title/Subtitles-->
-	<h1 style="border: 15px solid yellow;">I think this is a title</h1>
-			<h2>I think this is a subtitle</h2>
+	<h1 style="border: 15px solid yellow;">Welcome to my Website!</h1>
+			<h2>Made by Matteo Gristina</h2>
 
  
 <!--Links-->
@@ -22,7 +22,7 @@
 				<a href="https://matteogristina.github.io/html-reference.html">HTML Tutorial</a><br>
 					<a href="https://matteogristina.github.io/u3portfolio/index.html">History of the Internet</a><br>
 <!--Paragraph-->
-	<p style="background-color:blue;">I think this is supposed to be a paragraph</p>
+	<p style="background-color:blue;">tbd</p>
 
 </body>
 </html>
