--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 			<a href="https://matteogristina.github.io/css-exercises/index.html">CSS Exercises</a><br>
 				<a href="https://matteogristina.github.io/html-reference.html">HTML Tutorial</a><br>
 					<a href="https://matteogristina.github.io/u3portfolio/index.html">History of the Internet</a><br>
+						<a href="matteogristina.github.io/background/index.html">Image</a><br>
+							<a href="matteogristina.github.io/background/index2.html">REsponsive Image</a><br>
 <!--Paragraph-->
 	<p style="background-color:blue;">tbd</p>
 
