--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<a href="https://matteogristina.github.io/html-reference.html">HTML Tutorial</a><br>
 					<a href="https://matteogristina.github.io/u3portfolio/index.html">History of the Internet</a><br>
 						<a href="https://matteogristina.github.io/background/index.html">Image</a><br>
-							<a href="https://matteogristina.github.io/background/index2.html">REsponsive Image</a><br>
+							<a href="https://matteogristina.github.io/background/index2.html">Responsive Image</a><br>
 <!--Paragraph-->
 	<p style="background-color:blue;">tbd</p>
 
