--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<a href="https://matteogristina.github.io/background/index.html">Image</a><br>
 							<a href="https://matteogristina.github.io/background/index2.html">Responsive Image</a><br>
 <!--Paragraph-->
-	<p style="background-color:blue;">tbd</p>
+	<p style="background-color:blue;">NEW LINK HERE</p>
 
 </body>
 </html>
