--- a/whydidimakethis/index.html
+++ b/whydidimakethis/index.html
@@ -1,1 +1,26 @@
+<!--Setup-->
+	<!DOCTYPE html>
+		<html>
+			<head>
+			 <link rel="icon" href="/images/favicon.png">
+			</head>
+			
+			
+			
+<!--Title--> 
+	<title>w̵̤͎̤̮̼̠͎͇͗̒̍̉̐̚͝ȩ̷̥͇̣̰͎͔̈́̽̀̈́̒̋͊́̍̎̿͗̔̽̒̂͊̈́̀͋̐͊̀̕̕͝l̸̡̤̠͙̗̗͚̬̦͕̞̒̑͂̒̃̄̓͗͗́̌͜͠ͅc̴̛̛̖̞̺̟͍̝̗͉͖͋̉̉́̄̈́͘͘o̷̧̨̱̟͚̜̩̜̠͓̲͚͇͎̤̰̝͒̊͊̚ͅͅm̵̢̡̲̠̫͙̟͉̆̀͗͆́̽̋̂̐̀̽̊̽̈́͌̋̑́̂̆̓̄͗̆͗͆̀̿̔̌̒͒̓̃̋͘̚̕̕͠͝ȩ̴̡̡̧̹̤̲̲̙̦̺͉̖̮̻̝̮̣͎͍͖̗͇̫͍̻̺͕̘̫̤̥͇͉͎͔̮̼̍̒̐̓̀͝ ̴̢̨͍̟͔̟̠̩̱̥̭̪̼̦͇̄͊̃̀̓̎͒̽̊̉́̃͂̒́̂̀̃̌̔̾͐̐̆͆̇͊̊̚̕͘͝͠͝ͅẗ̶̡̡̨̙͎͉͕̼͍̯̺͙̤̱̭̪͉͙͎̙̼̱̗͕͉̖̗͔̘̱̼̦͖͔̪̫͌͆̋̌̌̍̌͑̏́͌͒̏̍̈́̆̆̋̓̄́̈́͊̈̕͠ͅͅơ̶̡̡̢̧̫̩̬̰͇̲̬͔̮̯̱̱͍̒̆͜ ̸̢̛̛̛̞͎̟̬͉͔̼̺̙̲̺͚̝͎̮̏͆̉̊̈̊̅̅̑̆̎͋̀̌̽̒͊̀̈̀̓̕͘̚͜͝͝ͅͅt̶̫̭̥͎͋̉̽̆͛͛́̑̓̄̓͊͂̌̀̔̈́̑̈́͐̏͆̈́̋̈́͒̉͌̇̇͊̚͝͠ḩ̵̫͙͓̮̙̱̠̼̈́͆̈͆̌̉͂̔̅̓̈́̋̈́̐̑͌̀̇͗͐́͐̀̃̇̀͆͊̇͘͠͝͝͠ͅẽ̵̢̛̛͍̟̘̳̲͙̱̘̦̙͔̟͙̩̭́͌̀͑́̆̂̍͋̊̈͗̈̌̔̄̆̍̑̍̇̚͝͝͠͠͝ ̴̨̢̨̨̳̱̼̩͔̝͕̥͍̥̮̗̤̱̲̣͉͎̖̩͍͚̠̦̦̹̘̰͇̭̳̼̦̈̓͑̐͝m̶̡̛͈͖̦̻̗͇̲̬̠̥͕͔̭̮̗̭̙̼̑́̌̎̓͌̋̐̇̄̋͌͆͊́̈̒̀̋̓̂̓́́̅̉̀͘̕̕͘̕͠͠͝ͅá̸̢̧̞̜̝̩̮̮̣̜͔̦̯̘͎̮̯̘̥̤̰̘̟̟̹̈̓̅͑̐͗̇͑̈́͑̀̾̿̍͌̈́̒̐̀̍̅̎͘̚͠͝ţ̵̞̹̻̞͚̌̑̏̊̾̄̕͜͠r̵̨̨̧̡̡͚͉̭̗̤̤͔͖̼̻̘̦̪̰̗̞͕̼̥͈̤̤͖̻̰͚͍̖͎͙̱̭̥̀͛̈́́́̾̂̎͊̓͊̎͆͛̆͒͆̕͠͠͝í̴̢̛̲͇̘̱̭̩͕̎͝ͅx̷̢̹̗̱̮̱͓̥̥̗̳͍͍͙̹͙̥̤̙͍̞̜̣̙͛̒̆̂̈́̏̐̔̈́̍́̈̃̃͗͛͌̆͊̍̿͊̒͛͛̉́̃͊̑̎̕̕͜͠͝͠ͅͅ</title>
+		<body style="background-color:black;">
+<!--Title/Subtitles-->
+	<!--<h1 style="border: 15px solid yellow;">Welcome to my Website!</h1>
+			<h2>Made by Matteo Gristina</h2>-->
+
+ 
+<!--Links-->
+	<a href="https://matteogristina.github.io/index.html">GO BACK</a><br>
+
+<!--Paragraph-->
+	<p style="background-color:;">NEW LINK HERE</p>
+
+</body>
+</html>
 
