--- a/whydidimakethis/index.html
+++ b/whydidimakethis/index.html
@@ -11,36 +11,5 @@
 	<title>w̵̤͎̤̮̼̠͎͇͗̒̍̉̐̚͝ȩ̷̥͇̣̰͎͔̈́̽̀̈́̒̋͊́̍̎̿͗̔̽̒̂͊̈́̀͋̐͊̀̕̕͝l̸̡̤̠͙̗̗͚̬̦͕̞̒̑͂̒̃̄̓͗͗́̌͜͠ͅc̴̛̛̖̞̺̟͍̝̗͉͖͋̉̉́̄̈́͘͘o̷̧̨̱̟͚̜̩̜̠͓̲͚͇͎̤̰̝͒̊͊̚ͅͅm̵̢̡̲̠̫͙̟͉̆̀͗͆́̽̋̂̐̀̽̊̽̈́͌̋̑́̂̆̓̄͗̆͗͆̀̿̔̌̒͒̓̃̋͘̚̕̕͠͝ȩ̴̡̡̧̹̤̲̲̙̦̺͉̖̮̻̝̮̣͎͍͖̗͇̫͍̻̺͕̘̫̤̥͇͉͎͔̮̼̍̒̐̓̀͝ ̴̢̨͍̟͔̟̠̩̱̥̭̪̼̦͇̄͊̃̀̓̎͒̽̊̉́̃͂̒́̂̀̃̌̔̾͐̐̆͆̇͊̊̚̕͘͝͠͝ͅẗ̶̡̡̨̙͎͉͕̼͍̯̺͙̤̱̭̪͉͙͎̙̼̱̗͕͉̖̗͔̘̱̼̦͖͔̪̫͌͆̋̌̌̍̌͑̏́͌͒̏̍̈́̆̆̋̓̄́̈́͊̈̕͠ͅͅơ̶̡̡̢̧̫̩̬̰͇̲̬͔̮̯̱̱͍̒̆͜ ̸̢̛̛̛̞͎̟̬͉͔̼̺̙̲̺͚̝͎̮̏͆̉̊̈̊̅̅̑̆̎͋̀̌̽̒͊̀̈̀̓̕͘̚͜͝͝ͅͅt̶̫̭̥͎͋̉̽̆͛͛́̑̓̄̓͊͂̌̀̔̈́̑̈́͐̏͆̈́̋̈́͒̉͌̇̇͊̚͝͠ḩ̵̫͙͓̮̙̱̠̼̈́͆̈͆̌̉͂̔̅̓̈́̋̈́̐̑͌̀̇͗͐́͐̀̃̇̀͆͊̇͘͠͝͝͠ͅẽ̵̢̛̛͍̟̘̳̲͙̱̘̦̙͔̟͙̩̭́͌̀͑́̆̂̍͋̊̈͗̈̌̔̄̆̍̑̍̇̚͝͝͠͠͝ ̴̨̢̨̨̳̱̼̩͔̝͕̥͍̥̮̗̤̱̲̣͉͎̖̩͍͚̠̦̦̹̘̰͇̭̳̼̦̈̓͑̐͝m̶̡̛͈͖̦̻̗͇̲̬̠̥͕͔̭̮̗̭̙̼̑́̌̎̓͌̋̐̇̄̋͌͆͊́̈̒̀̋̓̂̓́́̅̉̀͘̕̕͘̕͠͠͝ͅá̸̢̧̞̜̝̩̮̮̣̜͔̦̯̘͎̮̯̘̥̤̰̘̟̟̹̈̓̅͑̐͗̇͑̈́͑̀̾̿̍͌̈́̒̐̀̍̅̎͘̚͠͝ţ̵̞̹̻̞͚̌̑̏̊̾̄̕͜͠r̵̨̨̧̡̡͚͉̭̗̤̤͔͖̼̻̘̦̪̰̗̞͕̼̥͈̤̤͖̻̰͚͍̖͎͙̱̭̥̀͛̈́́́̾̂̎͊̓͊̎͆͛̆͒͆̕͠͠͝í̴̢̛̲͇̘̱̭̩͕̎͝ͅx̷̢̹̗̱̮̱͓̥̥̗̳͍͍͙̹͙̥̤̙͍̞̜̣̙͛̒̆̂̈́̏̐̔̈́̍́̈̃̃͗͛͌̆͊̍̿͊̒͛͛̉́̃͊̑̎̕̕͜͠͝͠ͅͅ</title>
 		<body style="background-color:black;">
 
-<link id="pagestyle" rel="stylesheet" type="text/css" href="style.css">
-
-
-
-<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js' type='text/javascript'></script>
-<script src='jquery.mousewheel.min.js' type='text/javascript'></script> 
-<script src='script.js' type='text/javascript'></script> 
-<script type='text/javascript'>
-Typer.file='kernel.txt';
-Typer.init();
-</script>
-
-
-
-</head> 
-<body onload="startTime()">
-<div class="center">
-</div>
-
-
-
-<div id='console'><button id="button" onclick="var x = setInterval(function(){
-        Typer.addText(72);
-}, 30);showdiv('radar');">Automate</button><div id="txt"></div>SCP_Secure_Systems_v3.2654.2 <br/></br>WARNING: LEVEL 4 Authorisation Needed</br></div>
-
-
-
-<div class="footerbtns">
-
-<a href="http://fediafedia.com/neo/" target="_self"><img src="http://i.imgur.com/Gjn5bBL.png" /></a>
-</div>
-</body>
-</html>
+<p> w̵̤͎̤̮̼̠͎͇͗̒̍̉̐̚͝ȩ̷̥͇̣̰͎͔̈́̽̀̈́̒̋͊́̍̎̿͗̔̽̒̂͊̈́̀͋̐͊̀̕̕͝l̸̡̤̠͙̗̗͚̬̦͕̞̒̑͂̒̃̄̓͗͗́̌͜͠ͅc̴̛̛̖̞̺̟͍̝̗͉͖͋̉̉́̄̈́͘͘o̷̧̨̱̟͚̜̩̜̠͓̲͚͇͎̤̰̝͒̊͊̚ͅͅm̵̢̡̲̠̫͙̟͉̆̀͗͆́̽̋̂̐̀̽̊̽̈́͌̋̑́̂̆̓̄͗̆͗͆̀̿̔̌̒͒̓̃̋͘̚̕̕͠͝ȩ̴̡̡̧̹̤̲̲̙̦̺͉̖̮̻̝̮̣͎͍͖̗͇̫͍̻̺͕̘̫̤̥͇͉͎͔̮̼̍̒̐̓̀͝ ̴̢̨͍̟͔̟̠̩̱̥̭̪̼̦͇̄͊̃̀̓̎͒̽̊̉́̃͂̒́̂̀̃̌̔̾͐̐̆͆̇͊̊̚̕͘͝͠͝ͅẗ̶̡̡̨̙͎͉͕̼͍̯̺͙̤̱̭̪͉͙͎̙̼̱̗͕͉̖̗͔̘̱̼̦͖͔̪̫͌͆̋̌̌̍̌͑̏́͌͒̏̍̈́̆̆̋̓̄́̈́͊̈̕͠ͅͅơ̶̡̡̢̧̫̩̬̰͇̲̬͔̮̯̱̱͍̒̆͜ ̸̢̛̛̛̞͎̟̬͉͔̼̺̙̲̺͚̝͎̮̏͆̉̊̈̊̅̅̑̆̎͋̀̌̽̒͊̀̈̀̓̕͘̚͜͝͝ͅͅt̶̫̭̥͎͋̉̽̆͛͛́̑̓̄̓͊͂̌̀̔̈́̑̈́͐̏͆̈́̋̈́͒̉͌̇̇͊̚͝͠ḩ̵̫͙͓̮̙̱̠̼̈́͆̈͆̌̉͂̔̅̓̈́̋̈́̐̑͌̀̇͗͐́͐̀̃̇̀͆͊̇͘͠͝͝͠ͅẽ̵̢̛̛͍̟̘̳̲͙̱̘̦̙͔̟͙̩̭́͌̀͑́̆̂̍͋̊̈͗̈̌̔̄̆̍̑̍̇̚͝͝͠͠͝ ̴̨̢̨̨̳̱̼̩͔̝͕̥͍̥̮̗̤̱̲̣͉͎̖̩͍͚̠̦̦̹̘̰͇̭̳̼̦̈̓͑̐͝m̶̡̛͈͖̦̻̗͇̲̬̠̥͕͔̭̮̗̭̙̼̑́̌̎̓͌̋̐̇̄̋͌͆͊́̈̒̀̋̓̂̓́́̅̉̀͘̕̕͘̕͠͠͝ͅá̸̢̧̞̜̝̩̮̮̣̜͔̦̯̘͎̮̯̘̥̤̰̘̟̟̹̈̓̅͑̐͗̇͑̈́͑̀̾̿̍͌̈́̒̐̀̍̅̎͘̚͠͝ţ̵̞̹̻̞͚̌̑̏̊̾̄̕͜͠r̵̨̨̧̡̡͚͉̭̗̤̤͔͖̼̻̘̦̪̰̗̞͕̼̥͈̤̤͖̻̰͚͍̖͎͙̱̭̥̀͛̈́́́̾̂̎͊̓͊̎͆͛̆͒͆̕͠͠͝í̴̢̛̲͇̘̱̭̩͕̎͝ͅx̷̢̹̗̱̮̱͓̥̥̗̳͍͍͙̹͙̥̤̙͍̞̜̣̙͛̒̆̂̈́̏̐̔̈́̍́̈̃̃͗͛͌̆͊̍̿͊̒͛͛̉́̃͊̑̎̕̕͜͠͝͠ͅͅ <p>
+<p style="color:Green;">w̵̤͎̤̮̼̠͎͇͗̒̍̉̐̚͝ȩ̷̥͇̣̰͎͔̈́̽̀̈́̒̋͊́̍̎̿͗̔̽̒̂͊̈́̀͋̐͊̀̕̕͝l̸̡̤̠͙̗̗͚̬̦͕̞̒̑͂̒̃̄̓͗͗́̌͜͠ͅc̴̛̛̖̞̺̟͍̝̗͉͖͋̉̉́̄̈́͘͘o̷̧̨̱̟͚̜̩̜̠͓̲͚͇͎̤̰̝͒̊͊̚ͅͅm̵̢̡̲̠̫͙̟͉̆̀͗͆́̽̋̂̐̀̽̊̽̈́͌̋̑́̂̆̓̄͗̆͗͆̀̿̔̌̒͒̓̃̋͘̚̕̕͠͝ȩ̴̡̡̧̹̤̲̲̙̦̺͉̖̮̻̝̮̣͎͍͖̗͇̫͍̻̺͕̘̫̤̥͇͉͎͔̮̼̍̒̐̓̀͝ ̴̢̨͍̟͔̟̠̩̱̥̭̪̼̦͇̄͊̃̀̓̎͒̽̊̉́̃͂̒́̂̀̃̌̔̾͐̐̆͆̇͊̊̚̕͘͝͠͝ͅẗ̶̡̡̨̙͎͉͕̼͍̯̺͙̤̱̭̪͉͙͎̙̼̱̗͕͉̖̗͔̘̱̼̦͖͔̪̫͌͆̋̌̌̍̌͑̏́͌͒̏̍̈́̆̆̋̓̄́̈́͊̈̕͠ͅͅơ̶̡̡̢̧̫̩̬̰͇̲̬͔̮̯̱̱͍̒̆͜ ̸̢̛̛̛̞͎̟̬͉͔̼̺̙̲̺͚̝͎̮̏͆̉̊̈̊̅̅̑̆̎͋̀̌̽̒͊̀̈̀̓̕͘̚͜͝͝ͅͅt̶̫̭̥͎͋̉̽̆͛͛́̑̓̄̓͊͂̌̀̔̈́̑̈́͐̏͆̈́̋̈́͒̉͌̇̇͊̚͝͠ḩ̵̫͙͓̮̙̱̠̼̈́͆̈͆̌̉͂̔̅̓̈́̋̈́̐̑͌̀̇͗͐́͐̀̃̇̀͆͊̇͘͠͝͝͠ͅẽ̵̢̛̛͍̟̘̳̲͙̱̘̦̙͔̟͙̩̭́͌̀͑́̆̂̍͋̊̈͗̈̌̔̄̆̍̑̍̇̚͝͝͠͠͝ ̴̨̢̨̨̳̱̼̩͔̝͕̥͍̥̮̗̤̱̲̣͉͎̖̩͍͚̠̦̦̹̘̰͇̭̳̼̦̈̓͑̐͝m̶̡̛͈͖̦̻̗͇̲̬̠̥͕͔̭̮̗̭̙̼̑́̌̎̓͌̋̐̇̄̋͌͆͊́̈̒̀̋̓̂̓́́̅̉̀͘̕̕͘̕͠͠͝ͅá̸̢̧̞̜̝̩̮̮̣̜͔̦̯̘͎̮̯̘̥̤̰̘̟̟̹̈̓̅͑̐͗̇͑̈́͑̀̾̿̍͌̈́̒̐̀̍̅̎͘̚͠͝ţ̵̞̹̻̞͚̌̑̏̊̾̄̕͜͠r̵̨̨̧̡̡͚͉̭̗̤̤͔͖̼̻̘̦̪̰̗̞͕̼̥͈̤̤͖̻̰͚͍̖͎͙̱̭̥̀͛̈́́́̾̂̎͊̓͊̎͆͛̆͒͆̕͠͠͝í̴̢̛̲͇̘̱̭̩͕̎͝ͅx̷̢̹̗̱̮̱͓̥̥̗̳͍͍͙̹͙̥̤̙͍̞̜̣̙͛̒̆̂̈́̏̐̔̈́̍́̈̃̃͗͛͌̆͊̍̿͊̒͛͛̉́̃͊̑̎̕̕͜͠͝͠ͅͅ </p>
