--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<br>
 			<br>
 			<br>
-									<a href="https://matteogristina.github.io/subpew/index.html'>SUB 2 PEW</a><br>
+									<a href="https://matteogristina.github.io/subpew/index.html">SUB 2 PEW</a><br>
 		
 <!--Paragraph-->
 	<p style="background-color:blue;">NEW LINK HERE</p>
