change homepage links, tab titles, site animation

--- a/music.html
+++ b/music.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
    <head>
-        <title>matteo gristina</title>
+        <title>music - matteo gristina</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body class = "page">
+    <body>
 
-        <h1><a href = "index.html">matteo gristina</a></h1>
+        <h1><a href = "https://matteogristina.github.io/">matteo gristina</a></h1>
 
         <div class = "wrap">
     
