--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body class = "page">
+    <body>
 
-        <h1><a href = "index.html">matteo gristina</a></h1>
+        <h1><a href = "https://matteogristina.github.io/">matteo gristina</a></h1>
 
         <div class = "wrap">
     
