--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,13 @@
 
         </div>
 
-        <iframe src="http://docs.google.com/gview?url=http://infolab.stanford.edu/pub/papers/google.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
+        <div class = "info"></div>
+           <iframe class="pdf" 
+           src="./assets/MTG_Resume_2024_S.pdf"
+           width="800" height="500">
+           </iframe>
+    
+        </div>
 
     </body>
 </html>
